# localize-with-map

./: .gitignore  CMakeLists.txt  README.md  Similarity.h  averageImage.h  render.h
CreateDB/: CMakeLists.txt  CMakeLists.txt~
CreateDB/src/: Similarity.h  averageImage.h  createDB.cpp  createDBWithImages.cpp  createDBWithPointCloud.cpp  edgeDetect.h  render.h
Localize/src/: localization.cpp
src/: localization.cpp
